unpackaged/main/default/objects/Log__c/fields/Debug_message__c.field-meta.xml
<CustomField>
    <fullName>Debug_message__c</fullName>
    <label>Debug message</label>
    <length>120</length>
    <type>Text</type>
</CustomField>