unpackaged/main/default/objects/Log__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <label>Duration (Seconds)</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>