unpackaged/main/default/objects/Log__c/fields/Is_Manager__c.field-meta.xml
<CustomField>
    <fullName>Is_Manager__c</fullName>
    <formula>CreatedBy.IsManager__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Manager?</label>
    <type>Checkbox</type>
</CustomField>