unpackaged/main/default/objects/Log__c/fields/LogLevel__c.field-meta.xml
<CustomField>
    <fullName>LogLevel__c</fullName>
    <label>Log level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>error</fullName>
            </value>
            <value>
                <fullName>info</fullName>
            </value>
            <value>
                <fullName>debug</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>