unpackaged/main/default/objects/Log__c/fields/Mobile_Language__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Language__c</fullName>
    <label>Mobile Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>