unpackaged/main/default/objects/Log__c/fields/Mobile_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Time_Zone__c</fullName>
    <label>Mobile Time Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>