unpackaged/main/default/objects/Log__c/fields/Query__c.field-meta.xml
<CustomField>
    <fullName>Query__c</fullName>
    <label>Query (SOQL)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>