unpackaged/main/default/objects/Log__c/fields/Query_Parameters__c.field-meta.xml
<CustomField>
    <fullName>Query_Parameters__c</fullName>
    <label>Query Parameters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>