unpackaged/main/default/objects/Log__c/fields/relatedToId__c.field-meta.xml
<CustomField>
    <fullName>relatedToId__c</fullName>
    <label>Related To Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>