unpackaged/main/default/objects/Log__c/fields/Request_Size__c.field-meta.xml
<CustomField>
    <fullName>Request_Size__c</fullName>
    <label>Request Size (KB)</label>
    <precision>16</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>