unpackaged/main/default/objects/Log__c/fields/Request_URI__c.field-meta.xml
<CustomField>
    <fullName>Request_URI__c</fullName>
    <label>Request URI</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>