unpackaged/main/default/objects/Log__c/fields/Response_Size__c.field-meta.xml
<CustomField>
    <fullName>Response_Size__c</fullName>
    <label>Response Size (KB)</label>
    <precision>16</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>