unpackaged/main/default/objects/Log__c/fields/User_Agent__c.field-meta.xml
<CustomField>
    <fullName>User_Agent__c</fullName>
    <label>User Agent</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>