unpackaged/main/default/objects/Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Method__c</columns>
    <columns>Service_Name__c</columns>
    <columns>Query_Parameters__c</columns>
    <columns>Request__c</columns>
    <columns>Response__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>david</value>
    </filters>
    <label>All</label>
</ListView>