unpackaged/main/default/objects/Log__c/listViews/Delete_Task.listView-meta.xml
<ListView>
    <fullName>Delete_Task</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Method__c</columns>
    <columns>Service_Name__c</columns>
    <columns>Query_Parameters__c</columns>
    <columns>Request__c</columns>
    <columns>Response__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Name__c</field>
        <operation>equals</operation>
        <value>activities</value>
    </filters>
    <label>Delete Task</label>
</ListView>