unpackaged/main/default/objects/Log__c/listViews/Error_Log.listView-meta.xml
<ListView>
    <fullName>Error_Log</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Service_Name__c</columns>
    <columns>Method__c</columns>
    <columns>Has_Error__c</columns>
    <columns>Error_Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Has_Error__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Error Log</label>
</ListView>