unpackaged/main/default/objects/Log__c/listViews/Public_Inserted_Logs.listView-meta.xml
<ListView>
    <fullName>Public_Inserted_Logs</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Service_Name__c</columns>
    <columns>Method__c</columns>
    <columns>Has_Error__c</columns>
    <columns>Duration__c</columns>
    <columns>Response_Size__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Name__c</field>
        <operation>equals</operation>
        <value>Log</value>
    </filters>
    <label>Public Inserted Logs</label>
</ListView>