unpackaged/main/default/objects/Log__c/listViews/SOM_Debug_Logs.listView-meta.xml
<ListView>
    <fullName>SOM_Debug_Logs</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Class_Name__c</columns>
    <columns>Debug_message__c</columns>
    <columns>Has_Error__c</columns>
    <filterScope>Mine</filterScope>
    <label>SOM Debug Logs</label>
</ListView>