unpackaged/main/default/objects/Log__c/listViews/SOM_Error_Logs.listView-meta.xml
<ListView>
    <fullName>SOM_Error_Logs</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Class_Name__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Has_Error__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LogLevel__c</field>
        <operation>equals</operation>
        <value>error</value>
    </filters>
    <label>SOM Error Logs</label>
</ListView>