unpackaged/main/default/objects/Log__c/listViews/SOM_Info_Logs.listView-meta.xml
<ListView>
    <fullName>SOM_Info_Logs</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Class_Name__c</columns>
    <columns>Debug_message__c</columns>
    <columns>Has_Error__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LogLevel__c</field>
        <operation>equals</operation>
        <value>info</value>
    </filters>
    <label>SOM Info Logs</label>
</ListView>