unpackaged/main/default/objects/Log__c/listViews/Time_Out.listView-meta.xml
<ListView>
    <fullName>Time_Out</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Service_Name__c</columns>
    <columns>Method__c</columns>
    <columns>Has_Error__c</columns>
    <columns>Duration__c</columns>
    <columns>Response_Size__c</columns>
    <filterScope>Mine</filterScope>
    <label>Time Out</label>
</ListView>