unpackaged/main/default/objects/Log__c/listViews/Today_Logs.listView-meta.xml
<ListView>
    <fullName>Today_Logs</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Service_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today Logs</label>
</ListView>